# PixelizetQT

./: CMakeLists.txt  error.txt  gitignore
Pixelizer/: CMakeLists.txt  Pixelizer.cpp  Pixelizer.hpp  PixelizerLog.hpp  PixelizerOpenCL.cpp  PixelizerPThread.cpp
forms/: mainwindow.ui  resources.qrc
include/: PixelizeWorker.h  mainwindow.h
output/: CMakePresets.json  log.txt
src/: PixelizeWorker.cpp  mainwindow.cpp
